<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">

    <!-- Background Image (IADE Building) -->
    <ImageView
        android:id="@+id/iv_building"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_buttons"
        app:layout_constraintHeight_percent="0.6" />

    <!-- Overlay gradient for better text visibility -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintTop_toTopOf="@id/iv_building"
        app:layout_constraintBottom_toBottomOf="@id/iv_building"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Logo/Title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Button Container -->
    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_large"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_large"
            android:text="@string/btn_login"
            android:textSize="@dimen/text_large"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:backgroundTint="@color/accent_teal"
            android:layout_marginBottom="@dimen/margin_medium" />

        <!-- Request Info Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_request_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_large"
            android:text="@string/btn_request_info"
            android:textSize="@dimen/text_large"
            android:textColor="@color/text_dark"
            app:cornerRadius="@dimen/button_corner_radius"
            app:backgroundTint="@color/background_light"
            app:strokeColor="@color/text_gray"
            app:strokeWidth="1dp"
            style="@style/Widget.Material3.Button.OutlinedButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>